name:               jdd
version:            0.1
homepage:           https://github.com/brinchj/jdd
synopsis:           A JVM bytecode to Java decompiler
description:        A JVM bytecode to Java decompiler
category:           System
license:            OtherLicense
license-file:       LICENSE
author:             Johan Brinch
maintainer:         brinchj@gmail.com
data-files:         README.md TODO.md LICENSE
cabal-version:      >= 1.6
build-type:         Simple
stability:          Experimental

source-repository head
  type: git
  location: https://github.com/brinchj/jdd

executable jdd
    hs-source-dirs:
        src

    main-is:
        Main.hs

    other-modules:
        CustomPrelude
        -- Jimple rewriting
        Jimple
        Jimple.Types
        Jimple.Typing
        Jimple.Rewrite
        Jimple.Exceptions
        Jimple.Maps
        -- Code generation
        Cogen
        Cogen.Java
        Cogen.Java.Jimple
        -- Testing
        Test
        Test.Random

    build-depends:
        base >= 4, basic-prelude >= 0.3.2
        ,
        -- control
        mtl >= 2
        ,
        -- util
        process >= 1.1, safe >= 0.3.3
        ,
        -- data structures
        containers >= 0.4, text >= 0.11
        ,
        -- bytestring
        bytestring >= 0.9, base16-bytestring >= 0.1, base64-bytestring >= 0.1,
        cereal >= 0.3
        ,
        -- unix
        unix >= 2.5, Unixutils >= 1
        ,
        -- files
        directory >= 1, filepath >= 1, system-filepath >= 0.4
        ,
        -- Parsec
        parsec >= 3
        ,
        -- Testing
        QuickCheck >= 2.5, HUnit >= 1.2.5

    ghc-options: -funbox-strict-fields
                 -Wall -fno-warn-hi-shadowing
                 -fno-warn-name-shadowing
                 -fno-warn-missing-signatures
